--- a/css/honey.css
+++ b/css/honey.css
@@ -19,19 +19,59 @@
     border-color: var(--colour1);
 }
 
+.btn-outline-heist {
+    color: var(--colour5);
+    background-color: transparent;
+    background-image: none;
+    border-color: var(--colour5);
+}
+  
+.btn-outline-heist:hover {
+    color: #fff;
+    background-color: var(--colour1);
+    border-color: var(--colour1);
+}
+
+.btn {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
 .bg-light {
     background-color: var(--colour2)!important;
 }
 
 .navbar-brand {
     color: var(--colour5)!important;
-    position: absolute;
-    left: 50%;
-    transform: translatex(-50%);
+    width: 0;
+    margin: 0;
 }
 
 .nav-link {
     color: var(--colour5)!important;
+}
+
+.navbar-toggler {
+    position: absolute;
+    left: 90%;
+}
+
+.flex {
+    display: flex;
+}
+
+.mobile-nav .collapse {
+    display: none;
+}
+
+.mobile-nav .collapsing {
+    display: none;
+}
+
+.mobile-nav {
+    display: flex;
+    position: absolute;
+    right: 11%;
 }
 
 @media (min-width: 992px) {
@@ -43,5 +83,21 @@
 @media (max-width: 992px) {
     img {
         display:none!important;
+    }
+
+    .dual-collapse2 {
+        position: absolute;
+        top: 0px;
+    }
+
+    .order-1 {
+        left: -25%;
+        width: 25%;
+    }
+
+    .order-2 {
+        display:block;
+        left: 25%;
+        width: 25%;
     }
 }
