--- a/css/honey.css
+++ b/css/honey.css
@@ -158,11 +158,23 @@
     background-color: var(--colour6);
     width: 100%;
     height: 100%;
-
     padding-top: 50px;
 }
 
-.card-deck {
-    display: none;
+.card-columns {
+    height: 90%;
     width: 90%;
+    display: none;
+    column-count: 3;
+}
+
+.card {
+    height: 40%;
+    width: 30%;
+}
+
+.card-long {
+    height: 90%;
+    width: 33%;
+    max-height: 90%!important;
 }
