Decades old commit
Playing with this project again. Committing whatever changes I had to allow me to rollback when I break something. Looks like just images / js changes to let it load

--- a/css/honey.css
+++ b/css/honey.css
@@ -173,6 +173,11 @@
     width: 30%;
 }
 
+.card-img-top {
+    height: 120px;
+    object-fit: cover;
+}
+
 .card-long {
     height: 90%;
     width: 33%;
